# discovery-cli

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml
docs/: architecture.md  file_size_limit.md  flaky_tests.md
examples/: debug_attribute_args.rs  debug_enum.rs  debug_extends.rs  debug_extends2.rs  debug_test_cases.rs  debug_tree.rs  test_all_cases.rs  test_method_extraction.rs
src/: cache_strategy.rs  config.rs  daemon.rs  debug_tree.rs  error.rs  incremental.rs  lib.rs  logger.rs  main.rs  metadata.rs  parser.rs  scanner.rs  watcher.rs  writer.rs
src/daemon/: lock.rs
tests/: config_test.rs  configurable_limits_test.rs  daemon_ipc_test.rs  daemon_test.rs  error_types_test.rs  file_size_limit_test.rs  integration.rs  ipc_protocol_test.rs  panic_cleanup_test.rs  raw_ipc_test.rs  repeatable_attributes_test.rs  writer_test.rs
